<resources>
    <string name="app_name">Car Breakdown Helper</string>
    <string name="title_activity_maps_screen">Map</string>
    <string name="car_breakdown_helper">Car Breakdown Helper</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_text">LOGIN</string>
    <string name="login_text_dis">Login</string>

    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_title_dis">SIGN UP</string>
    <string name="todo">TODO</string>
    <string name="signup">Signup</string>
    <string name="enter_name">Enter Name</string>

    <string name="enter_email2">Enter Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="hrlp">Get Support!</string>
    <string name="faq">Faq</string>
    <string name="faq_s">Frequently Asked Questions</string>
    <string name="answer">answer</string>
    <string name="question">question</string>
    <string name="select_car_model">Select Car Model</string>
    <string name="get_help">Get Help</string>
    <string name="requested_successfully">Requested SuccessFully</string>
    <string name="our_person_will_arrive_at_your_location_within_2_hours">Our person will arrive at your location within 2 hours</string>
    <string-array name="brands">
        <item>BMW</item>
        <item>Audi</item>
        <item>Hyundai</item>
        <item>Volkswagen</item>
        <item>Toyota</item>
        <!--<item>KIA</item>-->
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
