<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="409dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/car"
            android:contentDescription="@string/todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="409dp"
        android:layout_height="479dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/textSignupdis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title_dis"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/SinputName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_name"
            app:layout_constraintBottom_toTopOf="@+id/SinputEmail"
            app:layout_constraintEnd_toEndOf="@+id/SinputEmail"
            app:layout_constraintStart_toStartOf="@+id/SinputEmail"
            app:layout_constraintTop_toBottomOf="@+id/textSignupdis"
             />

        <EditText
            android:id="@+id/SinputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            app:layout_constraintBottom_toTopOf="@+id/SinputMobile"
            app:layout_constraintEnd_toEndOf="@+id/SinputMobile"
            app:layout_constraintStart_toStartOf="@+id/SinputMobile"
            app:layout_constraintTop_toBottomOf="@+id/SinputEmail"
            android:autofillHints=""
            tools:targetApi="o" />

        <EditText
            android:id="@+id/SinputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/enter_email2"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/SinputPassword"
            app:layout_constraintEnd_toEndOf="@+id/SinputPassword"
            app:layout_constraintStart_toStartOf="@+id/SinputPassword"
            app:layout_constraintTop_toBottomOf="@+id/SinputName"
            android:autofillHints=""
            tools:targetApi="o" />

        <EditText
            android:id="@+id/SinputMobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/mobile_number"
            app:layout_constraintBottom_toTopOf="@+id/signupBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SinputPassword"
            android:autofillHints=""
            tools:targetApi="o" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>